trustfall_core/test_data/tests/parse_errors/fold_and_recurse.parse-error.ron
Err(UnsupportedDirectivePosition("@recurse", "this directive cannot appear after a @fold directive", Pos(
  line: 4,
  column: 42,
)))
